# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  07 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Changed the code for copying the MOTD files so it's fewer lines and makes
  more sense.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> +arch/powerpc.py,
  -arch/ppc.py, -arch/ppc64.py, arch/sparc.py, -arch/sparc64.py:
  Merged ppc.py and ppc64.py into powerpc.py and merged sparc.py and
  sparc64.py into sparc.py, so we have a cleaner set of arch files.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/amd64.py,
  arch/x86.py:
  Did a little cleanup on the x86.py to remove some redundant entries and
  added nocona and core2 to amd64.py, though they're currently commented out.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Write out HOSTUSE settings from arch/*.py to make.conf as well as any USE
  flags defined in the spec file.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc64.py:
  Added a patch from Markus Rothe <corsair@gentoo.org> to add power6 and cell
  subarches to ppc64 for bug #208860 and removing redundant CXXFLAGS settings,
  since catalyst sets CXXFLAGS=CFLAGS by default.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-chroot.sh, targets/support/kmerge.sh:
  Added clst_HOSTUSE to livecd-stage1 and livecd-stage2 package builds.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Added prescott to the subarches for x86.

  06 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/netboot2_target.py, targets/support/kmerge.sh:
  Add patch to enabled netboot2/linuxrc and automatically add path for
  initramfs overlay to genkernel commandline. Thanks to Justin Bronder
  <jsbronder@gentoo.org> in bug #208106

  06 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/netboot2_target.py: