@@ -9,7 +9,7 @@ import os,sys,imp,string,getopt
 import pdb
 
 __maintainer__="Chris Gianelloni <wolf31o2@gentoo.org>"
-__version__="2.0.5"
+__version__="2.0.6_pre1"
 
 conf_values={}
 
